<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>prescyent</name>
  <version>0.1.0</version>
  <description>Data-driven trajectory prediction library</description>
  <maintainer email="alexis.biver@inria.fr">abiver</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>prescyent_msg</exec_depend>
  <exec_depend>easydict</exec_depend>
  <exec_depend>fastapi</exec_depend>
  <exec_depend>matplotlib</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>pydantic</exec_depend>
  <exec_depend>pytorch_lightning</exec_depend>
  <exec_depend>tensorboard</exec_depend>
  <exec_depend>torch</exec_depend>
  <exec_depend>uvicorn</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
