[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prescyent"
dynamic = ["version"]
description = "Data-driven trajectory forecasting library"
readme = "README.md"
authors = [
    {name = "Alexis Biver", email = "alexis.biver@inria.fr"}
]
license = {text = "MIT"}
keywords = ["trajectory", "forecasting", "pytorch_lightning"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent"
]
dependencies = [
    "h5py>=3.10,<4",
    "matplotlib>=3.0,<4.0",
    "numpy>=1.17.3,<2.0.0",
    "pydantic>=2.0,<3.0",
    "pytorch_lightning>=2.0,<3.0",
    "protobuf>=4.0",
    "scipy>=1.9,<2.0",
    "tensorboard>=2.0,<3.0",
    "torch>=2.0,<3.0",
    "tqdm>=4.66",
]


[project.urls]
Documentation = "https://hucebot.github.io/prescyent/"
Repository = "https://github.com/hucebot/prescyent"
Issues = "https://github.com/hucebot/prescyent/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
version = {attr = "prescyent.__version__"}